@@ -1,0 +1,261 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac\u79cb\u5b63\u5927\u76db\u4e8b\uff01\u7159\u706b\u3001\u5929\u71c8\u3001\u842c\u8056\u7bc0\uff0c10\u6708\u4efd\u5fc5\u53bb\u76849\u5927\u6d3b\u52d5", "description": "\u6771\u4eac\u79cb\u5b63\u5927\u76db\u4e8b\uff01\u7159\u706b\u3001\u5929\u71c8\u3001\u842c\u8056\u7bc0\uff0c10\u6708\u4efd\u5fc5\u53bb\u76849\u5927\u6d3b\u52d5", "url": "https://www.famechos.me/news/\u6771\u4eac\u79cb\u5b63\u5927\u76db\u4e8b\uff01\u7159\u706b\u3001\u5929\u71c8\u3001\u842c\u8056\u7bc0\uff0c10\u6708\u4efd\u5fc5\u53bb\u76849\u5927\u6d3b\u52d5.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T23:56:27.009458+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動.html"/>
+<meta name="description" content="東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動，讓你體驗東京秋季的獨特魅力！" />
+<meta name="keywords" content="東京秋季活動、煙火、天燈、萬聖節、10月份活動、東京旅遊、秋季大盛事" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動.html" />
+        <meta property="og:title" content="東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動" />
+        <meta property="og:description" content="東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動" />
+        <meta property="twitter:description" content="東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京秋季大盛事！煙火、天燈、萬聖節，10月份必去的9大活動</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>東京在這個秋季變得更加熱鬧。多摩川煙火大會和台場的天燈節點亮了東京的天空。莎莎街音樂節也準備好了舞蹈，東京迪士尼度假區正在為萬聖節做準備。</p>
+<h2>煙火大會在多摩川</h2>
+<p>第46屆世田谷最大的煙火節將在田園都市線和東急大井町線的二子玉川站附近的多摩川上舉行。為了搶到一個好位置，請早點到場。煙火節的指南規定，每人只能佔據90cm x 90cm的藍色墊子，所以請早點到場！</p>
+<h2>森之瀧能在新宿御苑</h2>
+<p>傳統的日本能劇是一種獨特的沉浸式藝術形式，日本文化愛好者不能錯過。能劇表演通過精緻的面具和短篇故事組成，這個新宿的晚上也不例外，安排了兩個故事。</p>
+<h2>品尝北海道的美味佳肴</h2>
+北海道美食展（也稱為“北海道食堂”）是對日本最北部北海道的美食的4天慶祝活動。該地區以馬鈴薯、乳製品和肉類而聞名，有足夠的特色菜餚讓你忙上幾天，所以請確保你到場時是飢餓的。<h2>Diversity Park</h2>
+<p>該活動以殘障體育為重點，將在多個區域舉行各種活動。這些區域包括綠色區、主區、兒童區和體育區。此外，還將舉行慈善遊戲、籃球、VR體驗和舞台節目。</p>
+<h2>體驗伊勢的龍蝦盛宴</h2>
+<p>房總半島東側的海岸附近的伊勢龍蝦節以龍蝦而聞名。在這個節日中，你可以與很多人一起吃很多龍蝦。除了可以邊走邊吃的攤位外，還有固定價格的套餐。</p>
+<h2>音樂節莎莎街</h2>
+<p>上野的莎莎街音樂節是一個充滿食物、舞蹈和音樂的活動。你可以嘗試你的運氣，跳一些莎莎舞——不用擔心你不是專業舞蹈家，因為這個活動將會非常擁擠，沒有人會關注你的舞蹈。</p>
+<h2>Experience the Magic of Tokyo's Lantern Festival</h2>
+<p>東京天燈節曾經在7月的海洋日舉行，但已經移到10月，以避免夏季的炎熱。這個節日有志願者放置了數百個紙燈籠，燈籠的設計精美，彩虹大橋作為背景，真是值得上Instagram的景象。</p>
+<h2>萬聖節慶典登陸東京迪士尼度假區</h2>
+<p>東京迪士尼度假區即將迎來萬聖節活動！屆時，我們可以期待精彩的遊行、主題美食和商品，以及兩個公園的特別裝飾。今年的迪士尼萬聖節將允許遊客在9月30日至11月7日期間全程裝扮。</p>
+<h2>慶祝秋季的玫瑰盛事</h2>
+<p>舊古河庭園的秋季玫瑰節是個悠閒的好去處，可以欣賞美麗的玫瑰。庭園以20世紀初的西式花園（包括大量玫瑰收藏）、日式花園和大型西式豪宅而聞名。活動每年10月至11月舉行。</p>
+
+<p>資料來源：Tokyo Cheapo</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1iRFU6WSpWQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選.html">東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
