@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 23:53:57 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 23:56:41 +0800</lastBuildDate>
 
   <item>
   <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
@@ -25,5 +25,11 @@
   <description>如果你錯過了在京都祇園觀賞藝妓的機會不要擔心在東京也有機會看到藝妓你只需要知道在哪裡找藝妓是受過古典訓練的表演者掌握多種技能包括交談藝術演奏三味線飲酒遊戲詩歌和...</description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 23:53:57 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
+  <link>https://www.famechos.me/news/東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選.html</link>
+  <description> 東京在這個秋季變得更加熱鬧。多摩川煙火大會和台場的天燈節點亮了東京的天空。莎莎街音樂節也準備好了舞蹈，東京迪士尼度假區正在為萬聖節做準備。  多摩川煙火大會 </description>
+  <category>Others</category>
+  <pubDate>Fri, 11 Oct 2024 23:56:41 +0800</pubDate>
 </item></channel>
 </rss>
