@@ -1,2 +1,3 @@
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-halloween-yokai-and-local-festivals/
 https://www.koreaherald.com/view.php?ud=20241002050690
+https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-see-geisha-in-tokyo/
